<resources>

    <string name="app_name">My</string>
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>
    <string name="nav_header_title">Epsilon</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Acceuil</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Formation</string>
    <string name="menu_competences">Compétences</string>
    <string name="menu_Expériences">Expériences</string>
    <string name="menu_reference">réferences</string>

</resources>
