<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_competences"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_competences" />
        <item
            android:id="@+id/nav_Expériences"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Expériences" />
        <item
            android:id="@+id/nav_reference"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reference" />
    </group>
</menu>